--- a/style.css
+++ b/style.css
@@ -1,28 +1,75 @@
-.welcome {
-   border: 1px solid black;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
-   box-sizing: content-box;
+ body,
+    html {
+        height: 100%
+    }
 
-   margin: auto;
-   margin: auto;margin-top: -50px;
+   body {
+        display: flex;
+        margin: 0;
+        flex-direction: row;
+    }
 
-  
-   text-align: center;
-   
-   position: absolute;
+    .left {
+        width: 20%;
+        padding: 10px;
+        justify-items: right;
+    }
+    
+    .middle {
+        width: 60;
+        padding: 10px;
+    }
 
-}
-.center {
-   display: flex;
-   justify-content: center;
-   align-items:center ;
-   flex-direction: column;
+    .right {
+        width: 20%;
+        padding: 10px;
+    }
 
-}
-p {
-   padding: 20px;
-}
-.btnBegin {
-   padding:20px 30px ;
+    .row {
+        display: flex;
+        flex-direction: row;
+        align-items:center;
+    }
 
-}
+    .questions {
+        border: 5px solid black;
+        padding: 10px;
+    }
+
+    .column {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .question {
+        color: black;
+    }
+
+    .answer {
+        color: blue;
+    }
+
+    .checked {
+        color: lightblue;
+        border: 2px;
+        border-color: black;
+    }
+
+    div.answer:hover,
+    div.answer:active {
+        color: white;
+        background-color: blue;
+    }
+
+    .hide {
+        display: none;
+    }
+
+    .center {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        border: 5px solid black;
+        padding: 10px;
+    }
